# Kagami-Bot

./: .env.template  .gitignore  Cargo.toml  README.md
src/: .env  command_handler.rs  main.rs
src/commands/: command.rs  mod.rs
src/commands/core/: mod.rs  ping.rs  shutdown.rs
src/commands/information/: help.rs
